parser tests and MAYOR corrections