@@ -17,14 +17,14 @@ public class MethodASTBuilder implements ASTBuilder<Method> {
         return statement.size() > 3
                 && Objects.equals(statement.get(0).getType(), "METHOD")
                 && Objects.equals(statement.get(1).getType(), "LPAR")
-                && Objects.equals(statement.get(statement.size() - 1).getType(), "RPAR")
-                && valueASTBuilder.verify(statement.subList(2, statement.size() - 2));
+                && Objects.equals(statement.getLast().getType(), "RPAR")
+                && valueASTBuilder.verify(statement.subList(2, statement.size() - 1));
     }
 
     @Override
     public Method build(List<Token> statement) {
-        return new Method(statement.get(0).getValue(),
-                valueASTBuilder.build(statement.subList(2, statement.size() - 2)));
+        return new Method(statement.getFirst().getValue(),
+                valueASTBuilder.build(statement.subList(2, statement.size() - 1)));
     }
 }
 
